
        * when parent of ctxpopup is resized, ctxpopup calls dismissed signal

2013-01-19  WooHyun Jung

        * When string in entry is changed, access to sd should be forbidden after smart_callback_call is called.

2013-01-18  Thiep Ha (thiep.ha@samsung.com)

        * Fix memory leak of the ctxpopup and callback function to be a ctxpoup obj is delivered to.

2013-01-23  WooHyun Jung

        * In _timer_cb of elm_notify, access to sd should be forbidden after smart_callback_call is called.

2013-01-29  Jaehwan Kim

        * Fix the scroll position is calculated by the size of pan object, not the size of scroller.

2013-01-29  ChunEon Park (Hermet)

        * Fix a elm_transit crash issue when user delete all target objects in the effect end callback.

2013-02-07  WooHyun Jung

        * elm_entry_single_line_set should not change cnp_mode when PLAINTEXT mode.

2013-02-17  Cedric Bail

	* Improve support for some 64bits system.

2013-02-17 Mike Blumenkrantz

        * ignore tab key widget focus change if control/alt is pressed
        * prevent blank entry hoversels

2013-02-20 Carsten Haitzler (The Rasterman)

        * Fix gl engine vsync option pass-in in elm_win
        * Fix elm_progressbar_pulse() to abort if pulsing not enabled

2013-02-21  Jaehwan Kim

        * Fix scroller acceleration bug. It was accelerated even it's scrolled
        after finishing the previous scroll. This happens with page scroll enabled.

2013-03-02  Brian J. Lovin

        * Fix initial value of the spinner on the first mouse move.

2013-03-11  Tom Hacohen (TAsn)

	* Entry: Fixed a bug with text appending.

2013-03-13  WooHyun Jung

        * List : Focus_next should be executed only when access mode is enabled.

2013-03-13  Tae-Hwan Kim (bluezery)

        * Fix a memory leak in elm_genlist. Return value of elm_genlist_realized_items_get should be freed

2013-03-18  WooHyun Jung

        * Focus highlight should be reconfigured when theme is changed.