@@ -782,3 +782,9 @@
 2013-03-18  WooHyun Jung
 
         * Focus highlight should be reconfigured when theme is changed.
+
+2013-03-19  Jaehwan Kim
+
+        * Fix the elm_shutdown bug in _elm_shutdown_config.
+        When the elm_shutdown is used after elm_config_all_flush, the segment fault occur.
+        It's why it uses ecore_x in _prop_all_update_cb after removing it.
